--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     margin: auto;
 }
 
+h2 {
+    text-align: center;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -138,4 +142,18 @@ form > p {
     flex-direction: row;
     justify-content: space-around;
     width: max-content;
+}
+
+.inmuebles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 30px;
+    padding: 30px;
+}
+
+.inmuebles div {
+    width: 300px;
+    background-color: whitesmoke;
+    height: min-content;
 }
