--- a/style.css
+++ b/style.css
@@ -156,4 +156,15 @@ form > p {
     width: 300px;
     background-color: whitesmoke;
     height: min-content;
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px grey;
+}
+
+.inmuebles img {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.inmuebles div p {
+    padding-left: 5px;
 }
