--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ li a:hover {
 button {
     /* background-color: #bbd0ff; */
     background-color: #b296c4;
-    /* border: 2px solid rgb(102, 51, 153); */
     border: none;
     border-radius: 5px;
     padding: 10px;
@@ -142,9 +141,20 @@ form > p {
 .seccion {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     justify-content: space-around;
-    width: max-content;
+    gap: 30px;
+    padding: 30px;
+}
+ 
+.seccion > section:last-of-type div {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.seccion > section:last-of-type div button {
+    width: 100%;
+    margin: 5px;
 }
 
 .inmuebles {
