--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 body {
     background-color: lavender;
     margin: auto;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+    
+}
+
+input {
+    background-color: thistle;
+    border-radius: 3px;
+    height: 20px;
+    font-weight: bold;
 }
 
 h2 {
@@ -171,6 +179,11 @@ form > p {
     height: min-content;
     border-radius: 10px;
     box-shadow: 5px 5px 5px grey;
+    transition: all 0.5s ease-in-out;
+}
+
+.inmuebles div:hover {
+    transform: scale(1.05);
 }
 
 .inmuebles img {
@@ -210,4 +223,28 @@ form > p {
     animation-name: animartop;
     animation-duration: 0.4s;
     border-radius: 10px;
+}
+
+
+
+@keyframes animartop {
+    from {
+        top:-300px; 
+        opacity: 0;
+    }
+    to {
+        top:0; 
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes animartop {
+    from {
+        top:-300px; 
+        opacity:0; 
+    } 
+    to {
+        top:0; 
+        opacity:1;
+    }
 }
