--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
     background-color: lavender;
     margin: auto;
     /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-    
+    font-family: 'Croissant One', cursive;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 
 input {
@@ -58,6 +60,7 @@ button {
     border: none;
     border-radius: 5px;
     padding: 10px;
+    border: 1px solid blueviolet;
 }
 
 button:hover {
