--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ body {
 
 input {
     background-color: thistle;
-    border-radius: 3px;
-    height: 20px;
+    border-radius: 5px;
+    border: none;
+    height: 30px;
     font-weight: bold;
 }
 
