--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     background-color: lavender;
     margin: auto;
-    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     font-family: 'Croissant One', cursive;
     font-family: 'Dancing Script', cursive;
     font-family: 'Roboto', sans-serif;
@@ -66,6 +65,8 @@ button {
 
 button:hover {
     cursor: pointer;
+    background-color: #888;
+    border: 1px solid greenyellow;
 }
 
 header {
